2010-03-31  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/content/calendar-summary-dialog.xul
	Fixed typo which would prevent setting a reminder of
	1 week for received invitations

2010-03-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (checkServerCaps): SOGo
	provides a "false" inbox too but the caldav provider handles it
	wrong. In particular, the inbox "calendar" is not a separate
	instance, which causes an overwrite of the metadata when a regular
	calendar and its corresponding inbox are updated.

	* src/calendar/base/content/calendar-task-tree.xml
	(calendar-task-tree.mTaskTreeObserver.onPropertyChanged): take the
	"showInTodayPane" property into account, if this tree is part of
	the today-pane.
	(calendar-task-tree.mustShowInTaskTree): new method that returns
	true if the id of the current tree is "unifinder-todo-tree" and
	the calendar passed as parameter has its "showInTodayPane"
	propery set.

2010-03-25  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/sun-calendar-event-dialog-attendees.js
	(onLoad): restore the width of the attendees and freebusy
	containers, saved from the new "saveWidgets" methods.

2010-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-item-bindings.xml
	(item-date-row.Item): instead of keeping their original timezone
	and displaying it, the dates are now displayed according to the
	user timezone.

	* src/calendar/lightning/content/messenger-overlay-sidebar.js
	(gInvitationsCalendarManagerObserver): enhanced with interface
	calIObserver so that the new "showInvitations" parameter is taken
	directly into account (via notification).

	* src/calendar/base/content/agenda-listbox.js
	(agendaListbox.refreshCalendarQuery): hacked to refresh items only
	from calendars having the property "showInTodayPane" set to true.
	(agendaListbox.calendarObserver.onPropertyChanged): take